# mmal-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs
examples/: mjpeg-streamer.rs  multiport.rs  rsraspistill.rs  rsraspivid.rs
src/: bindings.rs  camera.rs  camera_info.rs  encoder.rs  error.rs  ffi.rs  lib.rs  mmalcore.rs  param.rs  video_encoder.rs
