[package]
name = "mmal-rs"
version = "0.1.0"
edition = "2021"
description = "Rust wrappers around MMAL C API"

[dependencies]
libc = "0.2"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version="1.28", features = ["rt", "sync", "macros", "net", "io-util"]}

[build-dependencies]
bindgen = { version = "0.66.1", optional = true }

[features]
default = ["generate_bindings"]

# Enable this feature to automatically generate bindings for the mmal headers.
# The default is to use the bindings already included in the src directory.
generate_bindings = ["bindgen"]

#[package.metadata.docs.rs]
#default-target = "armv7-unknown-linux-gnueabihf"
